Added percentage parameter for Charts iframe with % width for charts handling

--- a/DynamicBoard.UnitTest/Pages/Index.razor
+++ b/DynamicBoard.UnitTest/Pages/Index.razor
@@ -23,7 +23,7 @@
 <SME.DynamicBoard.UI.Components.ChartRenderView @ref="chartRenderView1"  AutoLoad="true" IsAllowRefresh="true" ChartId="4" ChartData="@ChartData" />
  *@
 
-<SME.DynamicBoard.UI.Components.ChartRenderView Language=1 AutoLoad="true" ChartId="128" ChartData="EmptyChartData" />
+<SME.DynamicBoard.UI.Components.ChartRenderView Language=1 AutoLoad="true" ChartId="223" WidthPercentage="100" ChartData="EmptyChartData" />
 
 
 
@@ -85,7 +85,7 @@
 @code {
     //  public ChartData ChartDataForNewRequest { get; set; } = new();
     public ChartData ChartData { get; set; } = new();
-    static string chartID = "4";
+    static string chartID = "223";
     static string chartIDLable = "99";
 
     public SME.DynamicBoard.UI.ChartData EmptyChartData { get; set; } = new();
